assets/css/dc.css
/* Digital commons styles */

/* Upcase, centre and underline titles in articles */
article h1, article h2, article h3 {
  text-align: center;
  text-transform: uppercase;
}

.single-title {
  font-size: 3.6rem;
}

article h1, article h2:not(.dc-square-page-title) {
  text-decoration: underline;
}

.gh-content h3 {
  font-weight: 300;
}

/* But left-align them in feeds */
.feed-wrapper h1.feed-title, .feed-wrapper h2, .feed-wrapper h3 {
  text-align: left;
}

.dc-canvas-3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 2rem;
}

.dc-square-page {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto 1fr;
  grid-template-areas: "image" "caption";
  overflow: hidden;
  position: relative;
  line-height: 1;
  padding: 0 !important;
}

.dc-square-page-noimage {
  width: 100%;
  grid-area: image;
  border: solid 1px;
}

.dc-square-page-image {
  width: 100%;
  grid-area: image;
}

.dc-square-page-title {
  grid-area: image;
  z-index: 10;
  justify-self: center;
  align-self: center;
  text-shadow: 0 0 0.5rem white;
}

.dc-square-page-caption {
  grid-area: caption;
  justify-self: stretch;
  align-self: stretch;
  text-align: center;
  margin-top: 1.6rem;
}

.gh-foot {
  background-color: var(--footer-background);
  color: var(--footer-color);
  margin-top: 9rem;
  padding-top: 4rem;
}

.gh-foot-brand, .gh-foot-menu, .gh-powered-by {
  display: flex;
  align-items: center;
}

.gh-foot a {
  color: var(--footer-color);
}

.gh-foot a:hover {
  color: var(--footer-color);
  filter: brightness(0.8);
}

.gh-foot-brand {
  flex-wrap: nowrap;
  gap: 10px;
}

.gh-foot-menu {
  font-weight: bold;
}

.gh-powered-by {
  justify-content: right;
}

.gh-foot-logo img {
  max-height: 3.2rem;
}

.gh-head-logo img {
  max-height: 5.6rem;
}

.gh-head-inner {
  padding: 2.5rem 0;
}

figure.nojs .hero-images > *:not(:first-child) {
  display: none; /* By default, without JS, hide all except the first hero image. */
}

.hero-image {
  display: grid;
  grid: 1fr / 1fr;
  align-items: center;
  justify-items: center;
}

.hero-image > * {
  grid-area: 1/1;
}
.hero-image > span {
  grid-area: 1/1;
  font-size: 6rem;
  font-weight: bold;
  min-width: 0;
  min-height: 0;
}
.hero-image * {
  color: var(--white-color);
  text-shadow: 0 0 .5rem var(--dark-gray-color);
}

